misc/kube/userdirectory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userdirectory
spec:
  type: ClusterIP
  selector:
    app: userdirectory
  ports:
  - port: 80
    targetPort: 8001
