misc/kube/userdirectory/networkpolicy-userdirectory.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: userdirectory-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: userdirectory
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: web
      - podSelector:
          matchLabels:
            app: coffeedirectory
